fixed margin spacing with bookshelf

--- a/src/App.css
+++ b/src/App.css
@@ -533,6 +533,7 @@ body{
     background-position: bottom;
     margin-bottom: 80px;
     padding-top: 30px;
+    margin-right: 0;
 }
 
 #userStories,
